profile fixes on mobile device

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,6 +21,10 @@ body, html { overflow-x:hidden; }
   margin-bottom: 0;
 }
 
+.phonea a {
+  background-color:#fff;
+}
+
 .modal-style-new {
        width: 100%;
     max-height: 100% !important;
